Avoid grid overflowing

--- a/packages/charts/src/chart_types/metric/renderer/dom/_text.scss
+++ b/packages/charts/src/chart_types/metric/renderer/dom/_text.scss
@@ -4,7 +4,7 @@ $padding: 8px;
   position: relative;
   z-index: 1;
   display: grid;
-  grid-template-columns: 100%;
+  grid-template-columns: minmax(0, 1fr);
   grid-template-rows: min-content auto min-content min-content;
   height: 100%;
   padding: $padding;
